package dataControllerUtils.protobuf;

message ADEStringList {
    extensions 2 to 102;

    repeated string values = 1;
}
