// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

package dataControllerUtils.protobuf;
   

message FMDFileType {
extensions 2 to 106;

    enum FILE_TYPE {
        COLLECTION = 0;
        COLLECTION_DOCUMENT = 1;
        DOCUMENT = 2;
        FOLDER = 3;
    }
      
    required FILE_TYPE type = 1;
}